--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <li><a href="#intro">OUR STORY</a></li>
                             <li><a href="#events">Events</a></li>
                             <li><a href="#instagram">Instagram</a></li>
-                            <li><a href="#eng-pics">Engagement</a></li>
+                            <li><a href="#eng-pics">Proposal & Roka Pics</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
                         </ul>
                         <ul class="member-actions">
@@ -123,12 +123,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-4 hidden-xs"></div>
-            <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
-                                                           class="btn btn-accent btn-large rsvp-btn">RSVP</a></div>
-            <div class="col-sm-4 hidden-xs"></div>
-        </div>
+
     </div>
     <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>
 </section>
@@ -213,17 +208,18 @@
                     <p><strong>8th March</strong></p>
 
                     <h5>Haldi <span class="time">10AM - 2PM</span></h5>
-                    <p>The haldi ceremony is usually held separately for the bride and the groom. This one is for the
-                        bride. It is a low-key event that involves the application of turmeric paste on the hands, legs
-                        and face of the bride. The groom is not allowed to see the bride after this ritual until the
-                        final wedding ceremony starts.</p>
+                    <p><strong>The Haldi Ceremony</strong><br>
+                        Sun, Sandalwood, and a Splash!<br>
+                        We’re honoring tradition with a side of Vitamin Sea (or at least, the pool!). Join us as we apply the sacred turmeric paste to the bride to gear up for the big day.</p>
+                    <p><strong>The Venue:</strong> Poolside</p>
+                    <p><strong>The Dress Code:</strong> Yellow &amp; Water-friendly</p>
                 </div>
                 <div class="wp5">
-                    <h5>Engagement and Bollywood Night <span class="time">7PM - 12AM</span></h5>
+                    <h5>Engagement and Bollywood Night <span class="time">6PM Onwards</span></h5>
                     <p>This event is no way close to ethnic. The bride & groom would like to have some "shots before the
                         knot". With booze flowing down the floor and the western attire on, everyone would be busy
-                        showing off their new moves on the stage which they have finely honed. Lastly, expect some beer
-                        pong matches & karaoke for sure.</p>
+                        their favorite tracks, showcasing their new moves on the dance floor. The DJ will be spinning the hottest tracks, so bring your dancing shoes and let the rhythm take over!
+                        </p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
@@ -269,7 +265,7 @@
                         their <a href="https://in.pinterest.com/pin/70157706734560844/visual-search/?cropSource=5&entrypoint=closeup_cta&rs=search">vibrant
                         kurtas</a> with pants or pyjamas along with an optional shawl.
                     </p>
-                    <h5>Engagement and Bollywood Night  <span class="time">7PM - 12AM</span></h5>
+                    <h5>Engagement and Bollywood Night  <span class="time">6PM Onwards</span></h5>
                     <p>
                         <strong>Western attire</strong>
                         <br>
@@ -320,7 +316,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Engagement Pics</h3>
+                <h3 class="header">Proposal & Roka Pics</h3>
             </div>
         </div>
         <div class="eng-grid yes-grid">
