--- a/index.html
+++ b/index.html
@@ -151,39 +151,14 @@
         <div class="row">
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
-                <p data-i18n-hi="हम अलग-अलग दुनिया से आते हैं.<br><br>वह आग है — साहसी, अभिव्यक्तिपूर्ण, हमेशा पूरी तरह से.<br>RCB हमेशा. पल में जीती है.<br>समय-बद्ध, लक्ष्य-केन्द्रित और पूरी तरह खुद जैसी.<br><br>मैं बर्फ हूँ — शांत, संयमित, भीतर से तीव्र.<br>CSK का वफादार. मैं योजना बनाता हूँ, परफेक्ट करता हूँ, और राह स्थिर रखता हूँ.<br>एक परफेक्शनिस्ट जो मानता है कि विवरण मायने रखते हैं.<br><br>उसे खाना पसंद है.<br>मुझे उसके लिए खाना बनाना पसंद है.<br><br>उसे सफर पसंद है.<br>मुझे ड्राइविंग पसंद है — यह जानते हुए कि वह मुझे भरोसा करती है.<br><br>हम प्लेलिस्ट, टीमों, योजनाओं और पसंद-नापसंद पर बहस करते हैं.<br>लेकिन जब बात अहम हो, हम वही चीजें चुनते हैं.<br><br>अलग पसंदें.<br>अलग स्टाइल.<br>अलग ऊर्जा.<br><br>फिर भी हम एक-दूसरे को संतुलित, स्थिर और पूरा करते हैं.<br><br>RCB हो या CSK, आग हो या बर्फ —<br>हम नीला लहू बहाते हैं, एक ही तरफ खड़े होते हैं, और एक ही टीम के लिए खेलते हैं.<br><br>यह एक जैसा होने की बात नहीं है.<br>यह हर दिन एक-दूसरे को चुनने की बात है.<br><br>और यही हमारी कहानी है :)">
-                    We come from different worlds.
+                <p data-i18n-hi="हम अलग-अलग दुनिया से आते हैं। वह शांत शक्ति लाती है—समय‑बद्ध, प्रेरित और विचारों में स्पष्ट। मैं शांत, अभिव्यक्तिपूर्ण, ऊर्जा से भरपूर हूँ और पल में जीता हूँ। उसे खाना पसंद है। मुझे उसके लिए खाना बनाना पसंद है। उसे सफ़र पसंद है। मुझे ड्राइविंग पसंद है—यह जानते हुए कि वह मुझ पर भरोसा करती है।<br><br>हम प्लेलिस्ट, टीमों, योजनाओं और पसंद‑नापसंद पर बहस करते हैं। लेकिन जब बात अहम हो, हम वही चीज़ें चुनते हैं। अलग पसंदें। अलग स्टाइल। अलग ऊर्जा। फिर भी हम एक‑दूसरे को संतुलित, स्थिर और पूरा करते हैं।<br><br>RCB हो या CSK, आग हो या बर्फ—हम नीला लहू बहाते हैं, एक ही तरफ खड़े होते हैं, और एक ही टीम के लिए खेलते हैं। यह एक जैसा होने की बात नहीं है। यह हर दिन एक‑दूसरे को चुनने की बात है।<br><br>और यही हमारी कहानी है।">
+                    We come from different worlds. She brings quiet strength—time-bound, driven, and clear in her thoughts. I am calm, expressive, full of energy, and live for the moment. She loves food. I love cooking for her. She enjoys the ride. I enjoy driving—knowing she trusts me at the wheel.
 
-                She is fire — bold, expressive, always all-in.
-                    RCB forever. Lives for the moment.
-                Time-bound, driven, and unapologetically herself.
+                    We argue over playlists, teams, plans, and preferences. But when it matters, we choose the same things. Different likes. Different styles. Different energies. Yet somehow, we balance, ground, and complete each other.
 
-                    I am ice — calm, composed, quietly intense.
-                CSK loyal. I plan, I perfect, I steady the course.
-                    A perfectionist who believes details matter.
+                    RCB or CSK, fire or ice—we bleed blue, stand on the same side, and play for the same team. This isn’t about being the same. It’s about choosing each other—every day.
 
-                She loves food.
-                I love cooking for her.
-
-                She enjoys the ride.
-                I enjoy driving — knowing she trusts me at the wheel.
-
-                We argue over playlists, teams, plans, and preferences.
-                But when it matters, we choose the same things.
-
-                    Different likes.
-                    Different styles.
-                    Different energies.
-
-            Yet somehow, we balance, ground, and complete each other.
-
-                    RCB or CSK, fire or ice —
-            we bleed blue, stand on the same side, and play for the same team.
-
-                 This isn’t about being the same.
-                 It’s about choosing each other — every day.
-
-                    And that’s our story :)
+                    And that’s our story. 🙂
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
