--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
                         Sun, Sandalwood, and a Splash!<br>
                         We’re honoring tradition with a side of Vitamin Sea (or at least, the pool!). Join us as we apply the sacred turmeric paste to the bride to gear up for the big day.</p>
                     <p data-i18n-hi="<strong>स्थान:</strong> पूलसाइड"><strong>The Venue:</strong> Poolside</p>
-                    <p data-i18n-hi="<strong>ड्रेस कोड:</strong> पीला और पानी‑अनुकूल"><strong>The Dress Code:</strong> Yellow &amp; Water-friendly</p>
+                    <p data-i18n-hi="<strong>ड्रेस कोड:</strong> पीला और पानी‑अनुकूल"><strong>The Dress Code:</strong>Vibrant Yellow &amp;</p>
                 </div>
                 <div class="wp5">
                     <h5 data-i18n-hi="एंगेजमेंट और बॉलीवुड नाइट <span class=&quot;time&quot;>6PM Onwards</span>">Engagement and Bollywood Night <span class="time">6PM Onwards</span></h5>
                     <p data-i18n-hi="यह इवेंट बिल्कुल भी एथनिक नहीं है। दुल्हन‑दूल्हा चाहते हैं कि “शादी से पहले कुछ शॉट्स” हो जाएँ। बूज़ बह रहा होगा और वेस्टर्न आउटफिट के साथ सभी डांस फ्लोर पर अपने नए मूव्स दिखाते रहेंगे। डीजे सबसे हिट ट्रैक्स बजाएगा, तो डांसिंग शूज़ जरूर लाएँ और रिदम के साथ बहें!">This event is no way close to ethnic. The bride & groom would like to have some &quot;shots before the
-                        knot&quot;. With booze flowing down the floor and the western attire on, everyone would be busy
+                        knot&quot;. With the dance floor buzzing and the western attire on, everyone would be busy
                         their favorite tracks, showcasing their new moves on the dance floor. The DJ will be spinning the hottest tracks, so bring your dancing shoes and let the rhythm take over!
                         </p>
                 </div>
@@ -246,15 +246,15 @@
                         <br>
                         A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
                         to pull off this night. You can see some pins for
-                        <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
-                        & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
+                        <a href="https://in.pinterest.com/search/pins/?q=bridesmaid%20sangeet%20outfit%20western&rs=typed">ladies</a>
+                        & <a href="https://in.pinterest.com/search/pins/?q=mens%20sangeet%20outfit%20tuxedo&rs=typed">gents</a>.
                     </p>
                     <h5 data-i18n-hi="शादी <span class=&quot;time&quot;>6PM-12AM</span>">Wedding <span class="time">6PM-12AM</span></h5>
                     <p data-i18n-hi="<strong>इंडो‑वेस्टर्न</strong><br>महिलाएँ अपने अलग अंदाज़ की साड़ियाँ, <a href=&quot;https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/&quot;>लहंगे</a>, <a href=&quot;https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/&quot;>अनारकली</a>, ड्रेसेज़ आदि पहन सकती हैं; पुरुष किसी भी तरह का सूट या सिर्फ़ ब्लेज़र पहन सकते हैं। अगर आप सूट/ब्लेज़र नहीं पहनना चाहते, तो <a href=&quot;https://www.pinterest.com/ramswarooppatra/high-neck-jackets-for-men/&quot;>हाई‑नेक (बैंड गाला) वेस्टकोट और शर्ट</a> कॉम्बो चुन सकते हैं।">
                         <strong>Indo-western</strong>
                         <br>
                         Ladies can flaunt their unconventional sarees,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/">lehengas</a>,
+                        <a href="https://in.pinterest.com/search/pins/?q=Indo%20Western%20Lehengas&rs=typed">lehengas</a>,
                         <a href="https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/">anarkalis</a>,
                         dresses and the list
                         goes on whereas gentlemen can wear any kind of suit or just blazer. If you don't like to wear a
