--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                     <p data-i18n-hi="<strong>हल्दी समारोह</strong><br>धूप, चंदन और थोड़ा सा छींटा!<br>हम परंपरा को थोड़ा सा ‘विटामिन‑सी’ (कम से कम पूल) के साथ मना रहे हैं। आइए, दुल्हन को शुभ हल्दी लगाकर बड़े दिन की तैयारी करें।"><strong>The Haldi Ceremony</strong><br>
                         Sun, Sandalwood, and a Splash!<br>
                         We’re honoring tradition with a side of Vitamin Sea (or at least, the pool!). Join us as we apply the sacred turmeric paste to the bride to gear up for the big day.</p>
-                    <p data-i18n-hi="<strong>स्थान:</strong> पूलसाइड"><strong>The Venue:</strong> Poolside</p>
-                    <p data-i18n-hi="<strong>ड्रेस कोड:</strong> पीला और पानी‑अनुकूल"><strong>The Dress Code:</strong>Vibrant Yellow &amp;</p>
+                    <p data-i18n-hi="<strong>स्थान:</strong> पूलसाइड"><strong>The Venue:</strong> Pool side ,VNR Resort</p>
+                    <p data-i18n-hi="<strong>ड्रेस कोड:</strong> पीला और पानी‑अनुकूल"><strong>The Dress Code:</strong> Vibrant Yellow </p>
                 </div>
                 <div class="wp5">
                     <h5 data-i18n-hi="एंगेजमेंट और बॉलीवुड नाइट <span class=&quot;time&quot;>6PM Onwards</span>">Engagement and Bollywood Night <span class="time">6PM Onwards</span></h5>
