--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header" data-i18n-hi="हमारे बारे में #ASforever">About US #ASforever</h3>
+                <h3 class="header" data-i18n-hi="हमारे बारे में #ASstartsForever">About US #ASstartsForever</h3>
             </div>
         </div>
         <div class="row">
