--- a/index.html
+++ b/index.html
@@ -296,6 +296,55 @@
                 <h3 class="header" data-i18n-hi="प्रपोज़ल और रोका तस्वीरें">Proposal & Roka Pics</h3>
             </div>
         </div>
+        <div class="eng-slider flexslider">
+            <ul class="slides">
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-02-lg.jpg">
+                        <img src="img/eng_pics/engagement-02-lg.jpg" alt=""/>
+                    </a>
+                </li>
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-04-lg.jpg">
+                        <img src="img/eng_pics/engagement-04-lg.jpg" alt=""/>
+                    </a>
+                </li>
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-05-lg.jpg">
+                        <img src="img/eng_pics/engagement-05-lg.jpg" alt=""/>
+                    </a>
+                </li>
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-06-lg.jpg">
+                        <img src="img/eng_pics/engagement-06-lg.jpg" alt=""/>
+                    </a>
+                </li>
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-07-lg.jpg">
+                        <img src="img/eng_pics/engagement-07-lg.jpg" alt=""/>
+                    </a>
+                </li>
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-09-lg.jpg">
+                        <img src="img/eng_pics/engagement-09-lg.jpg" alt=""/>
+                    </a>
+                </li>
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-10-lg.jpg">
+                        <img src="img/eng_pics/engagement-10-lg.jpg" alt=""/>
+                    </a>
+                </li>
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-11-lg.jpg">
+                        <img src="img/eng_pics/engagement-11-lg.jpg" alt=""/>
+                    </a>
+                </li>
+                <li>
+                    <a class="fancybox" rel="group" href="img/eng_pics/engagement-15-lg.jpg">
+                        <img src="img/eng_pics/engagement-15-lg.jpg" alt=""/>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div class="eng-grid yes-grid">
             <div class="eng-tile eng-pos-01">
                 <a class="fancybox" rel="group" href="img/eng_pics/engagement-01-lg.jpg">
